# route-solver

./: .gitignore  Cargo.toml  Makefile.toml  README.md  index.html
route-solver-backend/: Cargo.toml
route-solver-backend/src/: flight_api.rs  main.rs  router.rs  web_app.rs
route-solver-backend/test/: MockPricingAirline.csv
route-solver-frontend/: Cargo.toml  index.html  main.css
route-solver-frontend/src/: main.rs
route-solver-shared/: Cargo.toml
route-solver-shared/src/: lib.rs
src/: flight_api.rs  main.rs  web_app.rs
