[package]
name = "route-solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0.164", features = ["derive"] }
reqwest = "0.11.18"
yew = "0.20"
actix-web = "4"
async-trait = "0.1.68"
route-solver-shared = { path = "../route-solver-shared/" }
route-solver-frontend = { path = "../route-solver-frontend" }
thiserror = "1.0.43"
csv = "1.2.2"
chrono = "0.4.27"
actix-files = "0.6.4"